git add . && git commit -m "Final Firebase Config integriert" && git push.

--- a/index.html
+++ b/index.html
@@ -1,163 +1,11 @@
-<!doctype html>
-<html lang="de">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DFS Versicherungsanalyse</title>
-
-  <!-- Styles -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/min.css" />
-
-  <style>
-    body{background:#0E223B;color:#fff;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
-    .shell{display:grid;grid-template-columns:260px 1fr;gap:16px;min-height:100vh}
-    aside{background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.08);padding:16px}
-    .brand{font-weight:600;letter-spacing:.3px;margin-bottom:12px}
-    nav a{display:block;padding:10px 12px;border-radius:10px;color:#fff;text-decoration:none;border:1px solid rgba(255,255,255,.08);margin-bottom:8px}
-    nav a:hover{border-color:#1896c0}
-    header{display:flex;align-items:center;justify-content:space-between;margin:4px 0 12px 0}
-    .pill{font-size:12px;padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.2)}
-    iframe{border:0;width:100%;height:calc(100vh - 80px)}
-    .btn{background:#E5B74B;border:0;color:#1b2430;font-weight:600;padding:8px 10px;border-radius:10px}
-  </style>
-</head>
-<body>
-  <div class="shell">
-    <aside>
-      <div class="brand">Deutscher Finanzservice</div>
-      <nav aria-label="Module">
-        <a href="/modules/home/index.html"     target="content">Start</a>
-        <a href="/modules/customer/index.html" target="content">Kunden</a>
-        <a href="/modules/contracts/index.html" target="content">Verträge</a>
-        <a href="/modules/analyse/index.html"  target="content">Analyse</a>
-        <a href="/modules/dashboard/index.html" target="content">Dashboard</a>
-        <a href="/modules/print/index.html"    target="content">PDF/Print</a>
-      </nav>
-    </aside>
-
-    <main>
-      <header>
-        <h1 style="margin:0;padding:0;font-size:16px;">Projekt: Deutscher Finanzservice</h1>
-        <div>
-          <span id="sb-status" class="pill">Supabase: <span id="sb-state">getrennt</span></span>
-        </div>
-      </header>
-
-      <!-- Standard-Startseite im iFrame -->
-      <iframe id="content" name="content" src="/modules/home/index.html" title="Inhalt"></iframe>
-    </main>
-  </div>
-
-  <!-- Supabase Client (enthält deine URL + Anon-Key) -->
-  <script type="module" src="/scripts/supabaseClient.js"></script>
-
-  <!-- Kleiner Verbindungs-Check & Nav-Verhalten -->
-  <script type="module">
-    import { supabase } from "/scripts/supabaseClient.js";
-
-    // Einfaches Ping: zählt nur Kopfzeilen (schnell + sicher)
-    async function checkConnection(){
-      const badge = document.getElementById("sb-state");
-      try{
-        const { error } = await supabase
-          .from("customer")
-          .select("id", { count: "exact", head: true })
-          .limit(1);
-        if (error) throw error;
-        badge.textContent = "verbunden";
-      }catch(e){
-        badge.textContent = "getrennt";
-        console.debug("Supabase check failed:", e.message);
-      }
-    }
-
-    // Links im Sidebar in das iFrame laden (bleibt SPA‑Gefühl)
-    document.querySelectorAll("nav a").forEach(a=>{
-      a.addEventListener("click", (ev)=>{
-        ev.preventDefault();
-        const href = a.getAttribute("href");
-        document.getElementById("content").src = href;
-      });
-    });
-
-    checkConnection();
-  </script>
-  <script type="module">
-  import { saveCustomerToCloud, loadCustomers, loadCustomerContractDetails } from '../../scripts/supabase.js';
-
-  // Feld-Helper
-  const $ = (id) => document.getElementById(id);
-
-  // IDs deiner Inputs – bitte so benennen wie in der Seite vorhanden:
-  const fields = {
-    firma: $('cust-firma') || document.querySelector('[name="firma"]'),
-    branche: $('cust-branche') || document.querySelector('[name="branche"]'),
-    email: $('cust-email') || document.querySelector('[name="email"]'),
-    telefon: $('cust-telefon') || document.querySelector('[name="telefon"]'),
-    mitarbeiter: $('cust-mitarbeiter') || document.querySelector('[name="mitarbeiter"]'),
-    umsatz: $('cust-umsatz') || document.querySelector('[name="umsatz"]'),
-    gruendung: $('cust-gruendung') || document.querySelector('[name="gruendung"]'),
-    standort: $('cust-standort') || document.querySelector('[name="standort"]'),
-  };
-
-  // Buttons (über ihre Labels in der UI)
-  const btnSaveCloud = Array.from(document.querySelectorAll('button, a'))
-    .find(el => /in cloud speichern/i.test(el.textContent));
-  const btnLoadCloud = Array.from(document.querySelectorAll('button, a'))
-    .find(el => /aus cloud laden/i.test(el.textContent));
-
-  function readForm() {
-    const v = (el) => (el && 'value' in el ? el.value : '');
-    return {
-      firma: v(fields.firma),
-      branche: v(fields.branche),
-      email: v(fields.email),
-      telefon: v(fields.telefon),
-      mitarbeiter: Number(v(fields.mitarbeiter) || 0),
-      umsatz: Number(v(fields.umsatz) || 0),
-      gruendung: Number(v(fields.gruendung) || 0),
-      standort: v(fields.standort),
-    };
-  }
-
-  function toast(msg, isErr=false) {
-    console[isErr ? 'error' : 'log'](msg);
-    // optional: hier später hübsche UI-Toast einbauen
-    alert(msg);
-  }
-
-  if (btnSaveCloud) {
-    btnSaveCloud.addEventListener('click', async (e) => {
-      e.preventDefault();
-      try {
-        const payload = readForm();
-        if (!payload.firma) return toast('Firma ist Pflicht.', true);
-        const saved = await saveCustomerToCloud(payload);
-        toast(`Gespeichert: ${saved.firma}`);
-      } catch (err) {
-        toast(`Cloud-Speichern fehlgeschlagen: ${err.message}`, true);
-      }
-    });
-  }
-
-  if (btnLoadCloud) {
-    btnLoadCloud.addEventListener('click', async (e) => {
-      e.preventDefault();
-      try {
-        // wähle hier, ob du nur Kunden oder gleich die View laden willst:
-        // const rows = await loadCustomers();
-        const rows = await loadCustomerContractDetails();
-        if (!rows?.length) return toast('Keine Daten in der Cloud gefunden.');
-        console.table(rows);
-        toast(`Geladen: ${rows.length} Datensätze (Konsole zeigt Details)`);
-      } catch (err) {
-        toast(`Cloud-Laden fehlgeschlagen: ${err.message}`, true);
-      }
-    });
-  }
-</script>
-</body>
-</html>
+<!doctype html><html><head><meta charset=utf-8><title>DFS Tool</title>
+<link rel=stylesheet href=./styles/base.css></head>
+<body><h1>DFS Versicherungsanalyse</h1>
+<button id=save>In Cloud speichern</button><button id=load>Aus Cloud laden</button>
+<script type=module src="./scripts/firebaseClient.js"></script>
+<script type=module src="./scripts/firebase.js"></script>
+<script type=module>
+import {saveAllDFSBlobs,loadAllDFSBlobs} from './scripts/firebase.js';
+document.getElementById('save').onclick=()=>{const c={firma:"Testfirma"};localStorage.setItem('dfs.customer',JSON.stringify(c));saveAllDFSBlobs({customer:c});alert('Gespeichert');};
+document.getElementById('load').onclick=async()=>{const d=await loadAllDFSBlobs();alert('Geladen: '+JSON.stringify(d));};
+</script></body></html>
